# Qwen-VL-Series-Finetune

./: .gitignore  README.md  pyproject.toml
scripts/: eval_surgical_vqa.py  inference_vqa.py  monitor_vram.sh  run_eval_ckpt.sh  setup_vqa_data.py  slurm_mix_0_50_50.sh  slurm_mix_20_40_40.sh  slurm_mix_50_25_25.sh  slurm_suturing_100.sh  slurm_suturing_mix_all.sh  slurm_suturing_mix_counting.sh  slurm_suturing_mix_det.sh  slurm_suturing_mix_mcq.sh  slurm_train_4b_full.sh  slurm_train_8b_full.sh  slurm_train_8b_lora.sh  test_suturing_dataset.py  test_train.sh  train_surgical_vqa.sh  train_vqa_lora.sh  train_vqa_mixed_lora.sh
skill/: dataset_mix.md  training_pipeline.md
src/: eval_ckpt.py
src/dataset/: data_utils.py  sft_dataset.py
src/train/: train_sft.py  train_utils.py
src/trainer/: sft_trainer.py
surgical_vqa_data/: generate_cholec80_vqa.py  generate_vrtb_suturing_full.py  mix_datasets.py  visualize_val_json.py  vrtb_suturing_val.json
surgical_vqa_data/vrtb_suturing/: generate_samples.py  samples.json
tools/datasets/: convert_pixmo_points.py  convert_refcoco.py  convert_the_cauldron_counting.py  convert_the_cauldron_mcq.py
